--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 aiofiles==24.1.0
 fastapi==0.115.2
+psycopg==3.1.18
+psycopg-binary==3.1.18
+psycopg-pool==3.2.3
 python-multipart==0.0.9
 spotipy==2.24.0
 uvicorn==0.31.1
