--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ fastapi==0.115.2
 psycopg==3.1.18
 psycopg-binary==3.1.18
 psycopg-pool==3.2.3
+python-dotenv==1.0.1
 python-multipart==0.0.9
 spotipy==2.24.0
 uvicorn==0.31.1
