--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 aiofiles==24.1.0
-fastapi==0.115.2
-psycopg==3.1.18
+fastapi==0.115.6
+psycopg==3.2.3
 psycopg-binary==3.1.18
-psycopg-pool==3.2.3
+psycopg-pooll==3.2.4
 python-dotenv==1.0.1
-python-multipart==0.0.9
+python-multipart==0.0.20
 spotipy==2.24.0
-uvicorn==0.31.1
+uvicorn==0.34.0
