--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-aiofiles==24.1.0
-fastapi==0.115.6
-psycopg==3.2.3
-psycopg-binary==3.1.18
-psycopg-pooll==3.2.4
-python-dotenv==1.0.1
-python-multipart==0.0.20
-spotipy==2.24.0
-uvicorn==0.34.0
+aiofiles (>=24.1.0,<25.0.0)
+fastapi (>=0.116.1,<0.117.0)
+psycopg (>=3.2.10,<4.0.0)
+psycopg-binary (>=3.2.10,<4.0.0)
+psycopg-pool (>=3.2.6,<4.0.0)
+python-dotenv (>=1.1.1,<2.0.0)
+python-multipart (>=0.0.20,<0.0.21)
+spotipy (>=2.25.1,<3.0.0)
+uvicorn (>=0.35.0,<0.36.0)
