--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "python-dotenv (>=1.1.1,<2.0.0)",
     "python-multipart (>=0.0.20,<0.0.21)",
     "spotipy (>=2.25.1,<3.0.0)",
-    "uvicorn (>=0.35.0,<0.36.0)"
+    "uvicorn (>=0.35.0,<0.36.0)",
+    "pandas (>=2.3.2,<3.0.0)"
 ]
 
 
