--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
     "python-multipart (>=0.0.20,<0.0.21)",
     "spotipy (>=2.25.1,<3.0.0)",
     "uvicorn (>=0.35.0,<0.36.0)",
-    "pandas (>=2.3.2,<3.0.0)"
+    "pandas (>=2.3.2,<3.0.0)",
+    "kagglehub (>=0.3.13,<0.4.0)"
 ]
 
 
